<?xml version="1.0" encoding="utf-8"?>

<resources>
<!-- Name for the application -->
<string name="app_name">Inventory</string>

<!--  overflow menu options -->
<string name="action_insert_dummy_data">Insert Dummy Data</string>
<string name="action_delete_all_entries">Delete All Products</string>

<!-- text for the empty view -->
<string name="empty_view_title_text">There are no records in the database.</string>
<string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- editor activity -->
<string name="editor_activity_title_new_product">Add a Product</string>
<string name="editor_activity_title_edit_product">Edit Product</string>
<string name="action_save">Save</string>
<string name="action_delete">Delete</string>
<string name="editor_insert_product_successful">Product saved</string>
<string name="editor_insert_product_failed">Error with saving product</string>
<string name="editor_update_product_successful">Product updated</string>
<string name="editor_update_product_failed">Error with updating product</string>
<string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
<string name="discard">Discard</string>
<string name="keep_editing">Keep Editing</string>
<string name="editor_delete_product_successful">Product deleted</string>
<string name="editor_delete_product_failed">Error with deleting product</string>
<string name="delete_dialog_msg">Delete this product?</string>
<string name="delete">Delete</string>
<string name="cancel">Cancel</string>
<string name="category_overview">Overview</string>
<string name="category_type">Type of product</string>

<!-- dropdown menu option  -->
<string name="type_food">Food</string>
<string name="type_object">Object</string>
<string name="type_materials">Materials</string>

<!-- zero -->
<string name="zero">0</string>

    <!-- hints -->
    <string name="hint_product_name">Product Name</string>
    <string name="hint_price">Price ex. 100</string>
    <string name="hint_quantity">Quantity ex. 5</string>
    <string name="hint_supplier">Supplier Name</string>
    <string name="hint_supplier_phone">000 000 000</string>
    <string name="category_supplier">Supplier Name</string>
    <string name="category_supplier_phone">Supplier Phone Number</string>

    <!-- categories -->
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_name">Product Name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="sale">Sale</string>
    <string name="sale_button">Sale</string>

    <!-- toasts and error messages -->
    <string name="no_empty_values">All fields must have a value.</string>
    <string name="quantity_reduce_failed">There was an error reducing the quantity.</string>

    <!-- product contract -->
    <string name="context">content://</string>
    <string name="authority">com.oanaunciuleanu.inventorypart2</string>

    <!-- layout-->
    <string name="price_text">Price: </string>
    <string name="quantity_text">Quantity: </string>






</resources>
