<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

    <Button
        android:id="@+id/sell_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/name"
        android:focusable="false"
        android:text="@string/sale_button" />

    <LinearLayout
        android:id="@+id/price_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/price_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/quantity_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />


        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

    </LinearLayout>
</RelativeLayout>